# stock_trading_ml_modelling

./: .gitignore  cs360jajajaja  new.taskpaper  pyproject.toml  requirements.txt  run.ps1  venv.txt
stock_trading_ml_modelling/: README.md  _create_prices_table_sql.py  _feature_eng.py  _fixing_macd.py  _lgbm_run.py  _lgbm_training.py  _nn_feature_eng.py  _run_fund.py  _temp.py  _web_scrape.py  config.py  copy_db.py  functions.py  logger_config.py  requirements.txt  venv_ref.txt
stock_trading_ml_modelling/data_eng/: README.md  __init__.py  data.py
stock_trading_ml_modelling/database/: __init__.py  add_data.py  del_data.py  get_data.py  update_data.py
stock_trading_ml_modelling/libs/: data.py  logs.py  manage_data.py  run_fund_funcs.py  scrapping.py  stock_filtering.py
stock_trading_ml_modelling/manage_data/: __init__.py
stock_trading_ml_modelling/modelling/: classifier_model.py  price_data.py  resnet_model.py  run_cnn.py  training_data.py
stock_trading_ml_modelling/models/: __init__.py  prices.py
stock_trading_ml_modelling/prices/: add_data.py  del_data.py  get_data.py  update_data.py
stock_trading_ml_modelling/python_parsers/: test_server_connection.py  update_db_historic_bsh.py  update_db_historic_prices.py  update_db_historic_trades.py  update_db_tickers.py
stock_trading_ml_modelling/scrapping/: __init__.py  database.py  scrape_data.py  scrapes.py
stock_trading_ml_modelling/utils/: data.py  date.py  file.py  ft_eng.py  measure.py  scrape.py  str_formatting.py  timing.py
tests/: test_stock_trading_ml_modelling.py
(+2 files in other folders)
