[tool.poetry]
name = "stock_trading_ml_modelling"
version = "0.1.0"
description = ""
authors = ["Robert Franklin"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pandas = "^1.1.2"
numpy = "^1.19.1"
tables = "^3.6.1"
sklearn = "^0.0"
lightgbm = "^3.0.0"
matplotlib = "^3.3.1"
tqdm = "^4.48.2"
sqlalchemy = "^1.3.19"
scikit-optimize = "^0.8.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
