[tool.poetry]
name = "stock_trading_ml_modelling"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.3"
joblib = "lightgbm"
numpy = "sklearn"
scipy = "matplotlib"
numexpr = "pandas"
tqdm = "requests"
scikit-optimize = "sqlalchemy"
urllib3 = "^1.26.2"
SQLAlchemy = "^1.3.22"
pandas = "^1.2.1"
nest-asyncio = "^1.5.1"
aiohttp = "^3.7.3"
requests = "^2.25.1"
tensorflow = "^2.4.1"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
